FIX: wrong z index, resulting in channel list item overlapping the pop up window

--- a/client/src/pages/createChannel/createChannel.css
+++ b/client/src/pages/createChannel/createChannel.css
@@ -10,6 +10,7 @@
 	justify-content: center;
 	align-items: center;
 	overflow: auto; /* Add overflow property to enable scrolling */
+	z-index: 2;
 }
 
 .create-channel-popup-inner {
